some tweaks related to java 16 stuff
this is some prep for assisting with 1.17 update.