@@ -23,7 +23,7 @@ public class ArcSine extends PostfixMathCommand
     public Object asin(Object param) throws ParseException
     {
         if (param instanceof Complex) return ((Complex) param).asin();
-        else if (param instanceof Number) return new Double(Math.asin(((Number) param).doubleValue()));
+        else if (param instanceof Number) return Double.valueOf(Math.asin(((Number) param).doubleValue()));
 
         throw new ParseException("Invalid parameter type");
     }
